--- a/app/src/main/res/layout/fragment_converter.xml
+++ b/app/src/main/res/layout/fragment_converter.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ConverterFragment">
@@ -27,41 +26,31 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/checked_value"
+        app:layout_constraintEnd_toStartOf="@+id/checked_value"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvResult">
+        app:layout_constraintTop_toTopOf="@+id/checked_value">
 
+        <!-- TODO вернуть значение 0.0 -->
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editTextValue"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="0.0"
             android:hint="@string/input_temp"
-            android:inputType="number" />
+            android:inputType="number"
+            android:text="0" />
     </com.google.android.material.textfield.TextInputLayout>
-
-    <Button
-        android:id="@+id/button_result"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/result_button"
-        app:layout_constraintBottom_toBottomOf="@+id/checked_value"
-        app:layout_constraintEnd_toStartOf="@+id/checked_value"
-        app:layout_constraintStart_toStartOf="@+id/editTextLayout"
-        app:layout_constraintTop_toTopOf="@+id/checked_value" />
 
     <RadioGroup
         android:id="@+id/checked_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="16dp"
         android:checkedButton="@id/check_inch"
         android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="@+id/editTextLayout"
-        app:layout_constraintStart_toEndOf="@+id/button_result"
-        app:layout_constraintTop_toBottomOf="@+id/editTextLayout">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvResult">
 
         <RadioButton
             android:id="@+id/check_inch"
@@ -76,71 +65,50 @@
             android:text="@string/millimetre" />
     </RadioGroup>
 
-    <Button
-        android:id="@+id/button_null"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="0"
-        app:layout_constraintEnd_toStartOf="@+id/button_plus"
-        app:layout_constraintStart_toEndOf="@+id/button_minus"
-        app:layout_constraintTop_toBottomOf="@+id/checked_value" />
-
-    <Button
-        android:id="@+id/button_minus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="-"
-        app:layout_constraintEnd_toStartOf="@+id/button_null"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/button_null" />
-
-    <Button
-        android:id="@+id/button_plus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:text="+"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button_null"
-        app:layout_constraintTop_toTopOf="@+id/button_null" />
-
-    <Button
-        android:id="@+id/button_minus10"
+    <androidx.gridlayout.widget.GridLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
-        app:layout_constraintTop_toBottomOf="@id/button_null"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/button_minus1"
-        android:text="-10"/>
-
-    <Button
-        android:id="@+id/button_minus1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/button_minus10"
-        app:layout_constraintStart_toEndOf="@id/button_minus10"
-        app:layout_constraintEnd_toStartOf="@id/button_plus1"
-        android:text="-1"/>
-
-    <Button
-        android:id="@+id/button_plus1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/button_minus10"
-        app:layout_constraintStart_toEndOf="@id/button_minus1"
-        app:layout_constraintEnd_toStartOf="@id/button_plus10"
-        android:text="+1"/>
-
-    <Button
-        android:id="@+id/button_plus10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/button_minus10"
-        app:layout_constraintStart_toEndOf="@id/button_plus1"
+        app:columnCount="2"
         app:layout_constraintEnd_toEndOf="parent"
-        android:text="+10"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextLayout">
+
+        <Button
+            android:id="@+id/button_result"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/result_button" />
+
+        <Button
+            android:id="@+id/button_null"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0" />
+
+        <Button
+            android:id="@+id/button_minus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="-" />
+
+        <Button
+            android:id="@+id/button_plus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="+" />
+
+        <Button
+            android:id="@+id/button_minus10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="-10" />
+
+        <Button
+            android:id="@+id/button_plus10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="+10" />
+    </androidx.gridlayout.widget.GridLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
